--- a/style.css
+++ b/style.css
@@ -13,6 +13,34 @@ header {
 main {
   padding: 2em;
 }
+#banner {
+  text-align: center;
+  margin: 2em 0;
+}
+#banner img {
+  max-width: 100%;
+  height: auto;
+}
+#catalog {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
+  justify-content: center;
+}
+.product {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 1em;
+  width: calc(33.333% - 2em);
+  box-sizing: border-box;
+}
+.product img {
+  max-width: 100%;
+  height: auto;
+}
+.product-info {
+  text-align: center;
+}
 footer {
   background-color: #333;
   color: #fff;
@@ -21,14 +49,4 @@ footer {
   position: fixed;
   width: 100%;
   bottom: 0;
-}
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-li {
-  background-color: #fff;
-  margin: 0.5em 0;
-  padding: 1em;
-  border: 1px solid #ddd;
 }
