--- a/style.css
+++ b/style.css
@@ -4,49 +4,83 @@ body {
   padding: 0;
   background-color: #f4f4f4;
 }
+
 header {
   background-color: #333;
   color: #fff;
   padding: 1em 0;
   text-align: center;
 }
+
 main {
   padding: 2em;
 }
+
 #banner {
   text-align: center;
   margin: 2em 0;
 }
+
 #banner img {
   max-width: 100%;
   height: auto;
 }
-#catalog {
+
+#subtitle {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+}
+#categories, #products {
   display: flex;
   flex-wrap: wrap;
   gap: 1em;
   justify-content: center;
 }
-.product {
+
+.category, .product {
   background-color: #fff;
   border: 1px solid #ddd;
   padding: 1em;
   width: calc(33.333% - 2em);
   box-sizing: border-box;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+  text-align: center;
 }
-.product img {
+
+.category:hover, .product:hover {
+  transform: scale(1.05);
+}
+
+.category img, .product img {
   max-width: 100%;
   height: auto;
 }
-.product-info {
-  text-align: center;
+
+.category-info, .product-info {
+  margin-top: 0.5em;
 }
+
 footer {
   background-color: #333;
   color: #fff;
   text-align: center;
   padding: 1em 0;
-  position: fixed;
   width: 100%;
   bottom: 0;
+}
+
+button {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 1em;
+  transition: background-color 0.2s;
+}
+
+button:hover {
+  background-color: #555;
 }
